--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+*.jpg
+*.png
+
 # C extensions
 *.so
 
@@ -126,6 +129,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+EPP/
 ENV/
 env.bak/
 venv.bak/
@@ -160,3 +164,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+videos/
